k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kokboken
  labels:
    app.kubernetes.io/part-of: kokboken
